tests/suite/analyze/snapshots/suite__analyze__partial_redundancy_elimination__induction_variable_regression_used.snap
---
source: tests/suite/analyze/partial_redundancy_elimination.rs
assertion_line: 155
expression: used
---

                                   induction_variable_regression


  +----------------------------------------------------------------------------------------------+
  |                                                                                              |
  |                                                +------------------------------------------+  |
  |                                                |                  enter:                  |  |
  |                                                | {}                                       |  |
  |                                                | (MOVE (TEMP _a) (TEMP _ARG0))            |  |
  |                                                | {}                                       |  |
  |                                                | (MOVE (TEMP _b) (CONST 0))               |  |
  |                                                | {}                                       |  |
  |                                                | (JUMP r#while)                           |  |
  |                                                | {}                                       |  |
  |                                                +------------------------------------------+  |
  |                                                  |                                           |
  |                                                  |                                           |
  |                                                  v                                           |
+--------------------------------------------+     +------------------------------------------+  |
|                  r#false:                  |     |                                          |  |
| {}                                         |     |                                          |  |
| (EXP (CALL (NAME black_box) (TEMP _b)))    |     |                                          |  |
| {}                                         |     |                                          |  |
| (MOVE (TEMP _c) (TEMP _RET0))              |     |                 r#while:                 |  |
| {}                                         |     | {}                                       |  |
| (EXP (CALL (NAME black_box) (TEMP _c)))    |     | (CJUMP (GEQ (TEMP _b) (CONST 3)) r#true) |  |
| {}                                         |     | {}                                       |  |
| (MOVE (TEMP _b) (ADD (TEMP _b) (CONST 1))) |     |                                          |  |
| {}                                         |     |                                          |  |
| (JUMP r#while)                             |     |                                          |  |
| {}                                         | <-- |                                          | <+
+--------------------------------------------+     +------------------------------------------+
                                                     |
                                                     |
                                                     v
                                                   +------------------------------------------+
                                                   |                 r#true:                  |
                                                   | {}                                       |
                                                   | (RETURN)                                 |
                                                   | {}                                       |
                                                   | (JUMP exit)                              |
                                                   | {}                                       |
                                                   +------------------------------------------+
                                                     |
                                                     |
                                                     v
                                                   +------------------------------------------+
                                                   |                  exit:                   |
                                                   | {}                                       |
                                                   +------------------------------------------+

